# research

./: .gitignore
mri-bsc/: .gitignore  PROJECT_RECAP.md  PROJECT_RECAP_FULL.md  README.md  ls  nohup.out  pyproject.toml
mri-bsc/.github/: copilot-instructions.md
mri-bsc/code/bsc/: bsc_core.py
mri-bsc/code/eval/: assoc_status.py  compute_bsc_summary.py  site_robustness.py
mri-bsc/code/features/: __init__.py  build_longitudinal_features.py  extract_bsc_features.py  extract_bsc_slopes.py
mri-bsc/code/index/: build_bsc_file_index.py  build_longitudinal_index.py  build_mci_conversion_labels.py
mri-bsc/code/ingest/: adni_sanity_check.py  build_adni_bad_rows.py  build_adni_manifest.py  build_manifest_adni.py  build_manifest_convertor.py  build_manifest_oasis.py  fix_manifest_chronological.py
mri-bsc/code/io/: s3.py
mri-bsc/code/ml/: generate_benchmark_table.py  generate_model_comparison_boxplot.py  generate_plots.py  prepare_survival_data.py  train_aft_model.py  train_baselines.py  train_diagnosis_classifier.py  train_rsf_combined.py  train_rsf_with_slopes.py  train_rsf_with_slopes_noscale.py  train_survival_with_slopes.py  train_xgb_survival_combined.py  train_xgboost_survival.py
mri-bsc/code/pipeline/: run_batch.py  (+3 more)
mri-bsc/configs/: paths.yaml  pipeline.yaml  synthseg_label_map.json
mri-bsc/data/: README.md
mri-bsc/env/: pyproject.toml
mri-bsc/mri_bsc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mri-bsc/notebooks/: Untitled.ipynb  filter_manifest.py
mri-bsc/paper/: main.tex  main_draft_two_limitations.tex  main_t1.tex  notion.txt  pmc_3297199.nbib  references.bib
mri-bsc/scripts/: MAIN.sh  cohort_demographics.py  combine.sh  convert_in_place.sh  dcm_in_files.sh  diagnose_model_issues.py  extract_paper_statistics.py  generate_18_results_figures.py  generate_nacc_t1_csv.py  plot_bsc_cd_curves.py  resume_convert.sh  run_adni_example.sh  run_oasis_example.sh  transfer_nacc_to_ishaan.sh
raw_t1_analysis/: .gitignore  EVALUATION_STRATEGIES.md  METHODOLOGY.md  README.md  SEGMENTATION_README.md  features.csv  features.md  features.py  features_all_456.csv  features_all_456_temp_100.csv  features_all_456_temp_150.csv  features_all_456_temp_200.csv  features_all_456_temp_250.csv  features_all_456_temp_300.csv  features_all_456_temp_350.csv  features_all_456_temp_400.csv  features_all_456_temp_450.csv  features_all_456_temp_50.csv  mri_visualizer.py  process_all_subjects.py  pyproject.toml  segmentation.py  shallow-ml.md  subject_data.py  test_features.py  test_s3.csv  test_s3.py  test_with_logging.csv  train_survival_advanced.py  train_survival_xgb.py
raw_t1_analysis/.github/: copilot-instructions.md
raw_t1_analysis/nbs/: Untitled.ipynb
raw_t1_analysis/survival_models/: config.json  cv_results.json  final_model_all_data.json  metadata.json  scaler.pkl  xgb_aft_model.json
(+849 files in other folders)
