[project]
name = "adni"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2026.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nibabel>=5.3.3",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "s3fs>=2026.1.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "vtk>=9.5.2",
    "xgboost>=3.1.3",
]
